--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://bookstore-server-tg0m.onrender.com/api/$1"
+      "destination": "'https://connect.indianbookshouse.in/api/$1"
     },
     {
       "source": "/(.*)",
